--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "mobx_react_native_template",
+  "name": "Loyalty",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "apisauce": "^0.4.0",
+    "apisauce": "^0.6.0",
     "mobx": "^2.3.5",
-    "mobx-react": "^3.4.0",
-    "react": "15.3.1",
-    "react-native": "^0.34.1",
+    "mobx-react": "^4.0.3",
+    "react": "15.4.1",
+    "react-native": "^0.39.0",
     "react-native-button": "^1.6.0",
     "react-native-navbar": "^1.5.0",
     "react-native-tab-navigator": "^0.3.2",
-    "react-native-vector-icons": "^2.0.3"
+    "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
