--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "apisauce": "^0.6.0",
     "mobx": "^2.3.5",
     "mobx-react": "^4.0.3",
-    "react": "15.4.1",
+    "react": "^15.4.1",
     "react-native": "^0.39.0",
     "react-native-button": "^1.6.0",
     "react-native-navbar": "^1.5.0",
-    "react-native-tab-navigator": "^0.3.2",
     "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
